--- a/index.html
+++ b/index.html
@@ -7,33 +7,27 @@
   <title>Jaya</title>
 </head>
 <body>
-  <div class="linkcontainer">
-    <div><a href="#">Hauzenex</a></div>
-    <div><a href="#">Hauzenex</a></div>
-    <div><a href="#">Hauzenex</a></div>
-    <div><a href="#">Hauzenex</a></div>
-    <div><a href="#">Hauzenex</a></div>
-    <div><a href="#">Hauzenex</a></div>
-    <div><a href="#">Hauzenex</a></div>
-    <div><a href="#">Hauzenex</a></div>
-    <div><a href="#">Hauzenex</a></div>
-    <div><a href="#">Hauzenex</a></div>
-    <div><a href="#">Hauzenex</a></div>
-    <div><a href="#">Hauzenex</a></div>
-    <div><a href="#">Hauzenex</a></div>
-    <div><a href="#">Hauzenex</a></div>
-    <div><a href="#">Hauzenex</a></div>
-    <div><a href="#">Hauzenex</a></div>
-    <div><a href="#">Hauzenex</a></div>
-    <div><a href="#">Hauzenex</a></div>
-    <div><a href="#">Hauzenex</a></div>
-    <div><a href="#">Hauzenex</a></div>
-    <div><a href="#">Hauzenex</a></div>
-    <div><a href="#">Hauzenex</a></div>
-    <div><a href="#">Hauzenex</a></div>
-    <div><a href="#">Hauzenex</a></div>
-    <div><a href="#">Hauzenex</a></div>
-    <div><a href="#">Hauzenex</a></div>
+  <div class="column-container">
+    <div class="column">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+    <div class="column">
+      <a href="#">Link 4</a>
+      <a href="#">Link 5</a>
+      <a href="#">Link 6</a>
+    </div>
+    <div class="column">
+      <a href="#">Link 7</a>
+      <a href="#">Link 8</a>
+      <a href="#">Link 9</a>
+    </div>
+    <div class="column">
+      <a href="#">Link 10</a>
+      <a href="#">Link 11</a>
+      <a href="#">Link 12</a>
+    </div>
   </div>
 </body>
 </html>
