--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>Jaya</title>
+<  script src="myscripts.js"></script>
 </head>
 <body>
   <div id="link-container"></div>
