--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>Jaya</title>
+  <link rel="icon" type="image/x-icon" href="/Images/claudemir.png">
 </head>
 <body>
   <div id="link-container"></div>
