--- a/index.html
+++ b/index.html
@@ -9,12 +9,7 @@
   <link rel="icon" type="image/x-icon" href="/Images/claudemir.png">
 </head>
 <body>
-  <div id="link-container">
-    <a href="#" data-image="image1.jpg">Hauzenex</a>
-    <a href="#" data-image="image2.jpg">Housenex</a>
-    <a href="#" data-image="image3.jpg">Horsenex</a>
-    <!-- me when w -->
-  </div>
+  <div id="link-container"></div>
   <div id="image-container">
     <img id="hover-image" src="Images/anothercrig.png" alt="Hover Image">
   </div>
