--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
   <link rel="icon" type="image/x-icon" href="/Images/claudemir.png">
 </head>
 <body>
-  <div id="link-container"></div>
-  <div id="image-container">
-    <img id="hover-image" src="Images/anothercrig.png" alt="Hover Image">
-  </div>
+  <a href="https://youtube.com/@Hauzenex">My youtube channel</a>
 </body>
 </html>
