--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="/Images/claudemir.png">
 </head>
 <body>
-  <a href="https://youtube.com/@Hauzenex">My youtube channel</a>
+  <a href="https://youtube.com/@Hauzenex">My youtube channel</a><br>
+  <a href="snake.html">some snake game</a><br>
 </body>
 </html>
