--- a/start/index.html
+++ b/start/index.html
@@ -63,6 +63,7 @@
     <div class="hall-of-fame">
         <h2>Hall of fame</h2>
         <img src="https://hauzenex.github.io/Images/cacida.png" alt="Hall of Fame Image">
+        "skibidi toilet - john bosco
     </div>
 
     <h1>Cowmafia on top</h1>
