--- a/start/index.html
+++ b/start/index.html
@@ -62,7 +62,7 @@
 <body>
     <div class="hall-of-fame">
         <h2>Hall of fame</h2>
-        <img src="https://hauzenex.github.io/Images/cacida.png" alt="Hall of Fame Image">
+        <img src="https://hauzenex.github.io/Images/cacida.png" alt="Hall of Fame Image"><br>
         "skibidi toilet - john bosco
     </div>
 
