--- a/start/index.html
+++ b/start/index.html
@@ -69,6 +69,7 @@
     <h1>Cowmafia on top</h1>
     <button onclick="window.location.href='https://www.youtube.com/@Hauzenex';">Youtube</button>
     <button onclick="window.location.href='https://hauzenex.github.io/ratsel/laoding.html';">Puzzle</button>
+    <button onclick="window.location.href='https://hauzenex.github.io/CLICKTHESUN.html';">Unfinished Wick game</button>
 </body>
 </html>
 
