--- a/start/index.html
+++ b/start/index.html
@@ -54,7 +54,7 @@
 
         img {
             margin-top: 10px;
-            width: 300px; /* 1.5 times the original size */
+            width: 300px;
             height: auto;
         }
     </style>
@@ -64,6 +64,7 @@
         <h2>Hall of fame</h2>
         <img src="https://hauzenex.github.io/Images/cacida.png" alt="Hall of Fame Image"><br>
         "skibidi toilet - john bosco
+        <img src="https://hauzenex.github.io/Images/cacida.png" alt="Hall of Fame Image"><br>
     </div>
 
     <h1>Cowmafia on top</h1>
