--- a/start/index.html
+++ b/start/index.html
@@ -64,7 +64,7 @@
         <h2>Hall of fame</h2>
         <img src="https://hauzenex.github.io/Images/cacida.png" alt="Hall of Fame Image"><br>
         "skibidi toilet - john bosco
-        <img src="https://hauzenex.github.io/Images/cacida.png" alt="Hall of Fame Image"><br>
+        <img src="https://hauzenex.github.io/Images/graft.png" alt="Grafitt Art"><br>
     </div>
 
     <h1>Cowmafia on top</h1>
