--- a/start/index.html
+++ b/start/index.html
@@ -63,7 +63,7 @@
     <div class="hall-of-fame">
         <h2>Hall of fame</h2>
         <img src="https://hauzenex.github.io/Images/cacida.png" alt="Hall of Fame Image"><br>
-        "skibidi toilet - john bosco
+        "skibidi toilet - john bosco <br>
         <img src="https://hauzenex.github.io/Images/graft.png" alt="Grafitt Art"><br>
     </div>
 
