--- a/opendoor/index.html
+++ b/opendoor/index.html
@@ -4,6 +4,7 @@
 <title>opendoor</title>
 </head>
 <body>
-<img src="hauzenex.github.io/opendoor1.gif" alt="opendoor">
+<img src="https://hauzenex.github.io/opendoor1.gif" alt="opendoor">
+<img src="https://hauzenex.github.io/cc.png" alt="door fight">
 </body>
 </html>
