--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </ul>           
         </ul>
 
-        <p>to contact me go to my discord id "anooba"</p>   
+        <p>to contact me go to my discord username "anooba"</p>   
 <hr>
         <address>made by: <a href="https://hauzenex.github.io">Hauzenex/Anooba</a> 04/01/2025 ddmmyyyy</address>
 </body>
