--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
         <title>Anooba</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    
+    <style>
+body {
+    font-family: 'Open Sans';
+}
+    </style>
 <body>
         <h1>Hauzenex</h1>
         <ul>
