--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <style>
-body {
-    font-family: 'Open Sans';
-}
+body{font-family:Open Sans,Arial;
     </style>
 <body>
         <h1>Hauzenex</h1>
