--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@ body{font-family:Open Sans,Arial;
 <body>
         <h1>Hauzenex</h1>
         <ul>
-            <li>miscellaneous:
+            <li>myself:
             <ul>
-                 <li><a href="https://youtube.com/@Hauzenex">Anooba</a>, my youtube channel (not really active)</li>
-            </ul>           
+                <li><a href="https://youtube.com/@Hauzenex">Anooba</a>, my youtube channel (not really active)</li>
+                <li><a href="https://scratch.mit.edu/users/Z9k87/">Scratch</a>, my scratch account though i don't really have games</li>
+                <li><a href="https://github.com/Hauzenex">Github</a>, my github where this page is stored</li>
+                <li><a href="https://steamcommunity.com/id/Hauzenex/">Steam</a>, my steam account (supposedly some people want this)</li>
+                <li><a href="https://pt.namemc.com/profile/Hauzenex.1">Namemc</a>, my minecraft account (where the name Hauzenex comes from)</li>
+            </ul>
         </ul>
 
-        <p>to contact me go to my discord username "anooba"</p>   
+        <p>to contact me go to my discord username "anooba"</p> 
 <hr>
-        <address>made by: <a href="https://hauzenex.github.io">Hauzenex/Anooba</a> 04/01/2025 ddmmyyyy</address>
+    <address>made by: <a href="https://hauzenex.github.io">Hauzenex/Anooba</a> 04/01/2025 ddmmyyyy</address>
 </body>
     
 </html>
