--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body {
     </style>
 <body>
         <h1>Hauzenex</h1>
-    <button onclick="dm()">dark mode</button>
+    <button onclick="dm()">theme switch</button>
         <ul>
             <li>myself:
             <ul>
