--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@ body {
   background-color: black;
   color: white;
 }
+
+.button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
     </style>
 <body>
         <h1>Hauzenex</h1>
