--- a/index.html
+++ b/index.html
@@ -19,11 +19,6 @@ body {
   color: white;
 }
 
-.button onclick {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-}
     </style>
 <body>
         <h1>Hauzenex</h1>
@@ -41,7 +36,7 @@ body {
         <p>to contact me go to my discord username "anooba"</p> 
 <hr>
     <address>made by: <a href="https://hauzenex.github.io">Hauzenex/Anooba</a> 04/01/2025 ddmmyyyy</address>
-    <button onclick="dm()">theme switch</button>
+    <button onclick="dm()" position: absolute; top: 10px; right: 10px;>theme switch</button>
 <script>
 function dm() {
    var element = document.body;
