--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ button {
 <body>
         <h1>Hauzenex</h1>
         <ul>
-            <li>myself:
+            <li>Myself:
             <ul>
                 <li><a href="https://youtube.com/@Hauzenex">Anooba</a>, my youtube channel (not really active)</li>
                 <li><a href="https://scratch.mit.edu/users/Z9k87/">Scratch</a>, my scratch account though i don't really have games</li>
@@ -37,6 +37,11 @@ button {
                 <li><a href="https://steamcommunity.com/id/Hauzenex/">Steam</a>, my steam account (supposedly some people want this)</li>
                 <li><a href="https://pt.namemc.com/profile/Hauzenex.1">Namemc</a>, my minecraft account (where the name Hauzenex comes from)</li>
             </ul>
+            <li>Games:
+            <ul>
+               <li><a href="https://hauzenex.github.io/ratsel/laoding.html">Puzzle</a>, you just follow paths on urls, done in less than 4 hours</li> 
+            </ul>
+                
         </ul>
 
         <p>to contact me go to my discord username "anooba"</p> 
