--- a/cbfdetected/index.html
+++ b/cbfdetected/index.html
@@ -8,33 +8,33 @@
     <style>
         body {
             margin: 0;
-            background-color: black; /* Set background to black */
+            background-color: black;
             height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
             text-align: center;
-            font-family: 'Roboto', Arial, sans-serif; /* Modern font */
-            flex-direction: column; /* Stack elements vertically */
+            font-family: 'Roboto', Arial, sans-serif;
+            flex-direction: column;
         }
 
         h1 {
             color: white;
-            font-size: 48px; /* Large text size for main heading */
-            font-weight: 700; /* Bold weight for heading */
-            margin-bottom: 20px; /* Space between heading and additional text */
+            font-size: 48px;
+            font-weight: 700
+            margin-bottom: 20px;
         }
 
         p {
             color: white;
-            font-size: 18px; /* Smaller text size for the paragraph */
-            font-weight: 400; /* Regular weight for paragraph */
-            max-width: 100%; /* Allow full width */
-            line-height: 1.5; /* Better line spacing */
+            font-size: 18px;
+            font-weight: 400;
+            max-width: 100%;
+            line-height: 1.5;
         }
 
         .line-break {
-            display: block; /* Forces line breaks */
+            display: block
         }
     </style>
 </head>
@@ -42,9 +42,9 @@
     <h1>CBF Detected, Loser!</h1>
     <p>
         Click Between Frames is illegitimate and will not be<br class="line-break"> 
-        allowed for use on hauzenex.github.io.<br class="line-break"> 
+        allowed for use here or anywhere.<br class="line-break"> 
         Please disable the mod in order to continue<br class="line-break">
-        using this website.
+        viewing this website.
     </p>
 </body>
 </html>
