--- a/ratsel/laoding.html
+++ b/ratsel/laoding.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="Images/whaat.png">
     <title>url trick</title>
     <style>
         body {
@@ -14,10 +15,10 @@
             align-items: center;
             color: white;
             font-family: monospace;
-            white-space: pre; /* Ensures the text retains its formatting */
+            white-space: pre;
         }
         .error {
-            color: black; /* Sets the text color to black */
+            color: black;
         }
     </style>
 </head>
