--- a/topml/index.html
+++ b/topml/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The unnoficial Top Mineland Players List, Discord: https://discord.com/invite/Ssvtv5snc2" />
     <title>Top Mineland Players</title>
     <style>
         body {
