--- a/topml/index.html
+++ b/topml/index.html
@@ -77,7 +77,7 @@ a {
         <li id="item-12" data-bg="https://placekitten.com/1920/1091">12. xDlyoudie</li>
         <li id="item-13" data-bg="https://placekitten.com/1920/1092">13. XXAzzamXX</li>
         <li id="item-14" data-bg="https://placekitten.com/1920/1093">14. Curios_Work2</li>
-        <li id="item-15" data-bg="https://hauzenex.github.io/topml/15hauzenex.png">15. Hauzenex</li>
+        <li id="item-15" data-bg="https://hauzenex.github.io/topml/wided_work.png">wided_work</li>
     </ul>
 
     <script>
