--- a/topml/index.html
+++ b/topml/index.html
@@ -7,7 +7,7 @@
     <title>Top Mineland Players</title>
     <style>
         body {
-            background-color: black;
+            background-color: gray;
             color: white;
             display: flex;
             justify-content: center;
