--- a/topml/index.html
+++ b/topml/index.html
@@ -92,7 +92,7 @@ a {
             });
             item.addEventListener('mouseout', () => {
                 document.body.style.backgroundImage = 'none';
-                document.body.style.backgroundColor = 'black';
+                document.body.style.backgroundColor = 'gray';
             });
         });
     </script>
