--- a/epz.html
+++ b/epz.html
@@ -1,1 +1,3 @@
-hey
+oi você achou meu site mas não tem nada nessa pagina (por enquanto)<br/>
+de qualquer forma ja que você esta aqui eu sempre estou pegando comissão (pessoa paisagem animal coisa do tipo etc por enquanto digital ja que eu não tenho dinheiro pra material fisico muito caro)<br/>
+qualquer coisa so me mandar mensagem pelo meu instagram ou pelo meu discord "hauzenex"
